# SilicaAnimus

./: .env.7z  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: docker-app.yml  python-app.yml
src/: pyproject.toml
src/SilicaAnimus/: DiscordClient.py  HelloAssoClient.py  SilicaAnimus.py  __init__.py  __main__.py  discord_client.py  event.py  google_sheets_client.py  helloasso_client.py  main.py  silica_animus.py  utils.py
src/tests/: test_discord_client.py  test_find_discord.py  test_google_sheets_client.py  test_helloasso_client.py  test_utils.py  test_weekly_message.py
