[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "SilicaAnimus"
version = "0.0.1"
description = "Le bot du serveur Discord de la voie du Thalos"

readme = "README.md"
requires-python = ">=3.8"
keywords = ["discord", "HelloAsso"]
authors = [
  {name = "Patator", email = "lmpatator@gmail.com" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "discord.py",
  "typer",
  "python-dotenv",
  "pytest",
  "pytest-asyncio",
  "pre-commit",
]

[project.scripts]
sample = "SilicaAnimus:main.py"

[tool.setuptools]
